--- a/src/pages/contato/index.html
+++ b/src/pages/contato/index.html
@@ -7,6 +7,7 @@
     <title>Unikids</title>
     <link rel="shortcut icon" href="../public/favicon.ico" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
+    <script src="../../assets/tailwindtheme.js"></script>
 </head>
 
 <body class="bg-stone-200">
@@ -15,9 +16,9 @@
             class="container space-y-4 mx-auto px-4 py-4 flex flex-col items-center md:space-y-0 md:flex-row md:items-center md:justify-between">
 
             <img src="../../../public/UniKids 02.png" alt="Logo da Unikids" class="w-48">
-            <nav class="flex gap-4 text-lg text-blue-700">
+            <nav class="flex gap-4 text-lg text-primary">
                 <a href="../../index.html">Início</a>
-                <a href="">Notícias</a>
+                <a href="">Blog</a>
                 <a href="">Contato</a>
             </nav>
         </div>
@@ -26,19 +27,25 @@
         <div class="container p-4 font-bold">
 
             <form class="bg-white rounded shadow-md p-4">
-                <h2 class="text-2xl text-blue-700 mb-2">Envie uma mensagem</h2>
+                <h2 class="text-2xl text-primary mb-2">Envie uma mensagem</h2>
                 <div class="mb-4">
                     <label for="nome" class="text-gray-700">Nome</label>
-                    <input type="text" name="nome" id="nome" class="form-control w-full placeholder:text-gray-500 bg-stone-200" placeholder="Digite seu nome">
+                    <input type="text" name="nome" id="nome" class="form-control w-full placeholder:text-gray-500 bg-stone-200 rounded" placeholder="Digite seu nome">
                 </div>
 
                 <div class="mb-4">
                     <label for="email" class="text-gray-700">Email</label>
-                    <input type="email" name="email" id="email" class="form-control w-full placeholder:text-gray-500 bg-stone-200" placeholder="Digite seu email">
+                    <input type="email" name="email" id="email" class="form-control w-full placeholder:text-gray-500 bg-stone-200 rounded" placeholder="Digite seu email">
                 </div>
 
+                <div class="mb-4">
+                    <label for="mensagem" class="text-gray-700">Mensagem</label>
+                    <textarea name="mensagem" id="mensagem" class="form-control w-full bg-stone-200 rounded"></textarea>
+                </div>
+
+
                 <div class="text-right">
-                    <button type="submit" class="py-2 px-4 bg-blue-500 text-white font-semibold rounded-lg shadow-md hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75">Enviar</button>
+                    <button type="submit" class="py-2 px-4 bg-primary-light text-white font-semibold rounded-lg shadow-md hover:bg-primary focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75">Enviar</button>
                 </div>
             </form>
 
@@ -65,14 +72,14 @@
         </div>
 
     </main>
-    <footer class="bg-yellow-500">
+    <footer class="bg-secondary">
         <div class="container flex justify-center px-4 py-4 gap-4 flex flex-col items-center text-sm text-zinc-800">
             <img src="../../../public/UniKids 01.png" alt="Logo da UniKids" class="w-16">
             <p class="mx-6">Educando e construindo um futuro cada vez melhor.</p>
             <div class="flex flex-col gap-2">
-                <a href="" class="border-b-2 border-blue-700">Início</a>
-                <a href="" class="border-b-2 border-blue-700">Notícias</a>
-                <a href="" class="border-b-2 border-blue-700">Contato</a>
+                <a href="" class="border-b-2 border-primary">Início</a>
+                <a href="" class="border-b-2 border-primary">Blog</a>
+                <a href="" class="border-b-2 border-primary">Contato</a>
             </div>
         </div>
     </footer>
