--- a/src/pages/contato/index.html
+++ b/src/pages/contato/index.html
@@ -10,8 +10,8 @@
     <script src="../../assets/tailwindtheme.js"></script>
 </head>
 
-<body class="bg-stone-200">
-    <header class="bg-slate-300">
+<body class="bg-neutral-200">
+    <header class="bg-blue-100">
         <div
             class="container space-y-4 mx-auto px-4 py-4 flex flex-col items-center md:space-y-0 md:flex-row md:items-center md:justify-between">
 
@@ -27,19 +27,19 @@
         <div class="container p-4 font-bold">
 
             <form class="bg-white rounded shadow-md p-4">
-                <h2 class="text-2xl text-primary mb-2">Envie uma mensagem</h2>
+                <h2 class="text-2xl text-primary mb-2">Envie-nos uma mensagem</h2>
                 <div class="mb-4">
-                    <label for="nome" class="text-gray-700">Nome</label>
+                    <label for="nome" class="text-paragraph-light">Nome</label>
                     <input type="text" name="nome" id="nome" class="form-control w-full placeholder:text-gray-500 bg-stone-200 rounded" placeholder="Digite seu nome">
                 </div>
 
                 <div class="mb-4">
-                    <label for="email" class="text-gray-700">Email</label>
+                    <label for="email" class="text-paragraph-light">Email</label>
                     <input type="email" name="email" id="email" class="form-control w-full placeholder:text-gray-500 bg-stone-200 rounded" placeholder="Digite seu email">
                 </div>
 
                 <div class="mb-4">
-                    <label for="mensagem" class="text-gray-700">Mensagem</label>
+                    <label for="mensagem" class="text-paragraph-light">Mensagem</label>
                     <textarea name="mensagem" id="mensagem" class="form-control w-full bg-stone-200 rounded"></textarea>
                 </div>
 
@@ -50,24 +50,24 @@
             </form>
 
             <div class="text-center my-4">
-                <h3 class="text-gray-700">Entre em contato conosco</h3>
+                <h3 class="text-paragraph-light">Entre em contato conosco</h3>
             </div>
 
             <div class="flex flex-col">
                 <div class="mb-4">
-                    <p class="text-gray-700">Telefone: <a href="tel:(XX) XXXXX-XXXX">(XX) XXXXX-XXXX</a></p>
+                    <p class="text-paragraph-light">Telefone: <a href="tel:(XX) XXXXX-XXXX">(XX) XXXXX-XXXX</a></p>
                 </div>
                 <div class="mb-4">
-                    <p class="text-gray-700">E-mail: <a href="mailto:contato@escolainfantil.com.br">contato@unikids.com.br</a></p>
+                    <p class="text-paragraph-light">E-mail: <a href="mailto:contato@escolainfantil.com.br">contato@unikids.com.br</a></p>
                 </div>
             </div>
 
             <div class="mb-4">
-                <p class="text-gray-700">Endereço: Rua X, 123 - Bairro Y - Cidade, Estado</p>
+                <p class="text-paragraph-light">Endereço: Rua X, 123 - Bairro Y - Cidade, Estado</p>
             </div>
 
             <div class="mb-4">
-                <p class="text-gray-700">Horário de atendimento: Segunda-feira a sexta-feira, das 8h às 18h</p>
+                <p class="text-paragraph-light">Horário de atendimento: Segunda-feira a sexta-feira, das 8h às 18h</p>
             </div>
         </div>
 
