nav updates and new blog page

--- a/src/pages/contato/index.html
+++ b/src/pages/contato/index.html
@@ -17,8 +17,9 @@
 
             <img src="../../../public/UniKids 02.png" alt="Logo da Unikids" class="w-48">
             <nav class="flex gap-4 text-lg text-primary">
-                <a href="../../index.html">Início</a>
-                <a href="">Blog</a>
+                <a href="../../../index.html">Início</a>
+                <a href="../blog/index.html">Blog</a>
+                <a href="">Galeria</a>
                 <a href="">Contato</a>
             </nav>
         </div>
@@ -30,12 +31,16 @@
                 <h2 class="text-2xl text-primary mb-2">Envie-nos uma mensagem</h2>
                 <div class="mb-4">
                     <label for="nome" class="text-paragraph-light">Nome</label>
-                    <input type="text" name="nome" id="nome" class="form-control w-full placeholder:text-gray-500 bg-stone-200 rounded" placeholder="Digite seu nome">
+                    <input type="text" name="nome" id="nome"
+                        class="form-control w-full placeholder:text-gray-500 bg-stone-200 rounded"
+                        placeholder="Digite seu nome">
                 </div>
 
                 <div class="mb-4">
                     <label for="email" class="text-paragraph-light">Email</label>
-                    <input type="email" name="email" id="email" class="form-control w-full placeholder:text-gray-500 bg-stone-200 rounded" placeholder="Digite seu email">
+                    <input type="email" name="email" id="email"
+                        class="form-control w-full placeholder:text-gray-500 bg-stone-200 rounded"
+                        placeholder="Digite seu email">
                 </div>
 
                 <div class="mb-4">
@@ -45,7 +50,8 @@
 
 
                 <div class="text-right">
-                    <button type="submit" class="py-2 px-4 bg-primary-light text-white font-semibold rounded-lg shadow-md hover:bg-primary focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75">Enviar</button>
+                    <button type="submit"
+                        class="py-2 px-4 bg-primary-light text-white font-semibold rounded-lg shadow-md hover:bg-primary focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75">Enviar</button>
                 </div>
             </form>
 
@@ -58,7 +64,8 @@
                     <p class="text-paragraph-light">Telefone: <a href="tel:(XX) XXXXX-XXXX">(XX) XXXXX-XXXX</a></p>
                 </div>
                 <div class="mb-4">
-                    <p class="text-paragraph-light">E-mail: <a href="mailto:contato@escolainfantil.com.br">contato@unikids.com.br</a></p>
+                    <p class="text-paragraph-light">E-mail: <a
+                            href="mailto:contato@escolainfantil.com.br">contato@unikids.com.br</a></p>
                 </div>
             </div>
 
