--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Unikids</title>
     <link rel="shortcut icon" href="../public/favicon.ico" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
-    <script src="./assets/tailwindtheme.js"></script>
+    <script src="./src/assets/tailwindtheme.js"></script>
 </head>
 
 <body class="bg-neutral-200">
@@ -15,11 +15,12 @@
         <div
             class="container space-y-4 mx-auto px-4 py-4 flex flex-col items-center md:space-y-0 md:flex-row md:items-center md:justify-between">
 
-            <img src="../public/UniKids 02.png" alt="Logo da Unikids" class="w-48">
+            <img src="./public/UniKids 02.png" alt="Logo da Unikids" class="w-48">
             <nav class="flex gap-4 text-lg text-primary">
                 <a href="">Início</a>
-                <a href="">Blog</a>
-                <a href="./pages/contato/index.html">Contato</a>
+                <a href="./src/pages/blog/index.html">Blog</a>
+                <a href="">Galeria</a>
+                <a href="./src/pages/contato/index.html">Contato</a>
             </nav>
         </div>
     </header>
@@ -73,7 +74,6 @@
             </div>
         </div>
         <div class="container mx-auto p-4 font-bold">
-
             <form class="bg-white rounded shadow-md p-4">
                 <h2 class="text-2xl text-primary mb-2">Solicite sua pré-matrícula</h2>
                 <div class="mb-4">
@@ -129,9 +129,7 @@
         </div>
 
         <div class="container mx-auto p-4">
-
             <div class="bg-white rounded shadow-md p-8 md:p-4">
-
                 <h2 class="text-2xl text-primary mb-2 font-bold">Confira nossa galeria</h2>
                 <div class="grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-4 p-4">
                     <img class="mx-auto shadow-xl border-4 rounded border-secondary" src="../public/placeholder.jpeg"
@@ -155,6 +153,7 @@
             <div class="flex flex-col gap-2">
                 <a href="" class="w-20 border-b-2 border-primary">Início</a>
                 <a href="" class="border-b-2 border-primary">Blog</a>
+                <a href="" class="border-b-2 border-primary">Galeria</a>
                 <a href="" class="border-b-2 border-primary">Contato</a>
             </div>
         </div>
