--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 </h2>
                 <div class="space-y-2">
                     <div class="bg-white rounded shadow-md p-4 flex justify-start gap-4">
-                        <img src="../public/icon_star.svg" alt="Ícone de uma constelação" class="">
+                        <img src="./public/icon_star.svg" alt="Ícone de uma constelação" class="">
                         <div class="text-paragraph">
                             <strong class="text-bold text-primary-dark">Educação inclusiva: </strong>
                             <p>
@@ -41,7 +41,7 @@
                         </div>
                     </div>
                     <div class="bg-white rounded shadow-md p-4 flex justify-start gap-4">
-                        <img src="../public/icon_star.svg" alt="Ícone de uma constelação" class="">
+                        <img src="./public/icon_star.svg" alt="Ícone de uma constelação" class="">
                         <div class="text-paragraph">
                             <strong class="text-bold text-primary-dark">Aprendizado lúdico: </strong>
                             <p>
@@ -51,7 +51,7 @@
                         </div>
                     </div>
                     <div class="bg-white rounded shadow-md p-4 flex justify-start gap-4">
-                        <img src="../public/icon_star.svg" alt="Ícone de uma constelação" class="">
+                        <img src="./public/icon_star.svg" alt="Ícone de uma constelação" class="">
                         <div class="text-paragraph">
                             <strong class="text-bold text-primary-dark">Desenvolvimento socioemocional: </strong>
                             <p>
@@ -61,7 +61,7 @@
                         </div>
                     </div>
                     <div class="bg-white rounded shadow-md p-4 flex justify-start items-center gap-4">
-                        <img src="../public/icon_star.svg" alt="Ícone de uma constelação" class="">
+                        <img src="./public/icon_star.svg" alt="Ícone de uma constelação" class="">
                         <div class="text-paragraph">
                             <strong class="text-bold text-primary-dark">Foco na família: </strong>
                             <p>
