--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unikids</title>
-    <link rel="shortcut icon" href="../public/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="./src/assets/tailwindtheme.js"></script>
 </head>
@@ -132,13 +132,13 @@
             <div class="bg-white rounded shadow-md p-8 md:p-4">
                 <h2 class="text-2xl text-primary mb-2 font-bold">Confira nossa galeria</h2>
                 <div class="grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-4 p-4">
-                    <img class="mx-auto shadow-xl border-4 rounded border-secondary" src="../public/placeholder.jpeg"
+                    <img class="mx-auto shadow-xl border-4 rounded border-secondary" src="./public/placeholder.jpeg"
                         alt="" class="">
-                    <img class="mx-auto shadow-xl border-4 rounded border-secondary" src="../public/placeholder-2.jpg"
+                    <img class="mx-auto shadow-xl border-4 rounded border-secondary" src="./public/placeholder-2.jpg"
                         alt="" class="">
-                    <img class="mx-auto shadow-xl border-4 rounded border-secondary" src="../public/placeholder-3.jpeg"
+                    <img class="mx-auto shadow-xl border-4 rounded border-secondary" src="./public/placeholder-3.jpeg"
                         alt="" class="">
-                    <img class="mx-auto shadow-xl border-4 rounded border-secondary" src="../public/placeholder-4.jpeg"
+                    <img class="mx-auto shadow-xl border-4 rounded border-secondary" src="./public/placeholder-4.jpeg"
                         alt="" class="">
                 </div>
             </div>
@@ -147,7 +147,7 @@
     </main>
     <footer class="bg-secondary">
         <div class="container flex justify-center px-4 py-4 gap-4 flex flex-col items-center text-sm text-zinc-800">
-            <img src="../public/UniKids 01.png" alt="Logo da UniKids" class="w-16">
+            <img src="./public/UniKids 01.png" alt="Logo da UniKids" class="w-16">
 
             <p class="mx-6">Educando e construindo um futuro cada vez melhor.</p>
             <div class="flex flex-col gap-2">
