:bug: fix: navbar/footer links and footer align

--- a/index.html
+++ b/index.html
@@ -17,9 +17,8 @@
 
             <img src="./public/UniKids 02.png" alt="Logo da Unikids" class="w-48">
             <nav class="flex gap-4 text-lg text-primary">
-                <a href="">Início</a>
+                <a href="#">Início</a>
                 <a href="./src/pages/blog/index.html">Blog</a>
-                <a href="">Galeria</a>
                 <a href="./src/pages/contato/index.html">Contato</a>
             </nav>
         </div>
@@ -146,15 +145,14 @@
         </div>
     </main>
     <footer class="bg-secondary">
-        <div class="container flex justify-center px-4 py-4 gap-4 flex flex-col items-center text-sm text-zinc-800">
+        <div class="container mx-auto flex justify-center px-4 py-4 gap-4 flex flex-col items-center text-sm text-zinc-800">
             <img src="./public/UniKids 01.png" alt="Logo da UniKids" class="w-16">
 
             <p class="mx-6">Educando e construindo um futuro cada vez melhor.</p>
             <div class="flex flex-col gap-2">
-                <a href="" class="w-20 border-b-2 border-primary">Início</a>
-                <a href="" class="border-b-2 border-primary">Blog</a>
-                <a href="" class="border-b-2 border-primary">Galeria</a>
-                <a href="" class="border-b-2 border-primary">Contato</a>
+                <a href="#" class="w-20 border-b-2 border-primary">Início</a>
+                <a href="./src/pages/blog/index.html" class="border-b-2 border-primary">Blog</a>
+                <a href="./src/pages/contato/index.html" class="border-b-2 border-primary">Contato</a>
             </div>
         </div>
     </footer>
