--- a/src/pages/contato/index.html
+++ b/src/pages/contato/index.html
@@ -19,8 +19,7 @@
             <nav class="flex gap-4 text-lg text-primary">
                 <a href="../../../index.html">Início</a>
                 <a href="../blog/index.html">Blog</a>
-                <a href="">Galeria</a>
-                <a href="">Contato</a>
+                <a href="#">Contato</a>
             </nav>
         </div>
     </header>
@@ -80,13 +79,13 @@
 
     </main>
     <footer class="bg-secondary">
-        <div class="container flex justify-center px-4 py-4 gap-4 flex flex-col items-center text-sm text-zinc-800">
+        <div class="container mx-auto flex justify-center px-4 py-4 gap-4 flex flex-col items-center text-sm text-zinc-800">
             <img src="../../../public/UniKids 01.png" alt="Logo da UniKids" class="w-16">
             <p class="mx-6">Educando e construindo um futuro cada vez melhor.</p>
             <div class="flex flex-col gap-2">
-                <a href="" class="border-b-2 border-primary">Início</a>
-                <a href="" class="border-b-2 border-primary">Blog</a>
-                <a href="" class="border-b-2 border-primary">Contato</a>
+                <a href="../../../index.html" class="border-b-2 border-primary">Início</a>
+                <a href="../blog/index.html" class="border-b-2 border-primary">Blog</a>
+                <a href="#" class="border-b-2 border-primary">Contato</a>
             </div>
         </div>
     </footer>
