--- a/src/pages/contato/index.html
+++ b/src/pages/contato/index.html
@@ -24,9 +24,9 @@
         </div>
     </header>
     <main>
-        <div class="container p-4 font-bold">
+        <div class="container mx-auto my-4 font-bold">
 
-            <form class="bg-white rounded shadow-md p-4">
+            <form class="bg-white rounded shadow-md p-4 mx-auto">
                 <h2 class="text-2xl text-primary mb-2">Envie-nos uma mensagem</h2>
                 <div class="mb-4">
                     <label for="nome" class="text-paragraph-light">Nome</label>
@@ -44,7 +44,9 @@
 
                 <div class="mb-4">
                     <label for="mensagem" class="text-paragraph-light">Mensagem</label>
-                    <textarea name="mensagem" id="mensagem" class="form-control w-full bg-stone-200 rounded"></textarea>
+                    <textarea name="mensagem" id="mensagem"
+                        class="form-control w-full bg-stone-200 placeholder:text-gray-500 bg-stone-200 rounded"
+                        placeholder="Digite sua mensagem"></textarea>
                 </div>
 
 
@@ -52,34 +54,43 @@
                     <button type="submit"
                         class="py-2 px-4 bg-primary-light text-white font-semibold rounded-lg shadow-md hover:bg-primary focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75">Enviar</button>
                 </div>
+                <div class="flex flex-col">
+                    <div class="mb-4 flex gap-2">
+                        <img src="../../../public/icon_phone.svg" alt="">
+                        <p class="text-paragraph-light">Telefone: <a href="tel:(XX) XXXXX-XXXX">(79) XXXXX-XXXX</a></p>
+                    </div>
+                    <div class="mb-4 flex gap-2">
+                        <img src="../../../public/icon_email.svg" alt="">
+                        <p class="text-paragraph-light">E-mail: <a
+                                href="mailto:contato@escolainfantil.com.br">contato@unikids.com.br</a></p>
+                    </div>
+                </div>
+
+                <div class="mb-4 flex gap-2">
+                    <img src="../../../public/icon_map.svg" alt="">
+                    <p class="text-paragraph-light">Endereço: Rua X, 123 - Bairro Y - Cidade, Estado</p>
+                </div>
+
+                <div class="mb-4 flex gap-2">
+                    <img src="../../../public/icon_schedule.svg" alt="">
+                    <p class="text-paragraph-light">Horário de atendimento: Segunda-feira a sexta-feira, das 8h às 18h
+                    </p>
+                </div>
             </form>
-
-            <div class="text-center my-4">
-                <h3 class="text-paragraph-light">Entre em contato conosco</h3>
-            </div>
-
-            <div class="flex flex-col">
-                <div class="mb-4">
-                    <p class="text-paragraph-light">Telefone: <a href="tel:(XX) XXXXX-XXXX">(XX) XXXXX-XXXX</a></p>
-                </div>
-                <div class="mb-4">
-                    <p class="text-paragraph-light">E-mail: <a
-                            href="mailto:contato@escolainfantil.com.br">contato@unikids.com.br</a></p>
-                </div>
-            </div>
-
-            <div class="mb-4">
-                <p class="text-paragraph-light">Endereço: Rua X, 123 - Bairro Y - Cidade, Estado</p>
-            </div>
-
-            <div class="mb-4">
-                <p class="text-paragraph-light">Horário de atendimento: Segunda-feira a sexta-feira, das 8h às 18h</p>
+        </div>
+        <div class="bg-primary py-8">
+            <div class="container mx-auto">
+                <h2 class="text-2xl text-white pb-4 font-bold">Nos visite</h2>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3917.5000297552606!2d-37.075358588512586!3d-10.925550489187497!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x71ab3f0b6497777%3A0x7b47144950f4af68!2sUNINASSAU%20-%20Aracaju!5e0!3m2!1spt-BR!2sbr!4v1700285679826!5m2!1spt-BR!2sbr"
+                    width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
-
     </main>
     <footer class="bg-secondary">
-        <div class="container mx-auto flex justify-center px-4 py-4 gap-4 flex flex-col items-center text-sm text-zinc-800">
+        <div
+            class="container mx-auto flex justify-center px-4 py-4 gap-4 flex flex-col items-center text-sm text-zinc-800">
             <img src="../../../public/UniKids 01.png" alt="Logo da UniKids" class="w-16">
             <p class="mx-6">Educando e construindo um futuro cada vez melhor.</p>
             <div class="flex flex-col gap-2">
