:lipstick: feat: logo change

--- a/src/pages/contato/index.html
+++ b/src/pages/contato/index.html
@@ -15,7 +15,7 @@
         <div
             class="container space-y-4 mx-auto px-4 py-4 flex flex-col items-center md:space-y-0 md:flex-row md:items-center md:justify-between">
 
-            <img src="../../../public/UniKids 02.png" alt="Logo da Unikids" class="w-48">
+            <img src="../../../public/logo_1.png" alt="Logo da Unikids" class="w-36">
             <nav class="flex gap-4 text-lg text-primary">
                 <a href="../../../index.html">Início</a>
                 <a href="../blog/index.html">Blog</a>
@@ -91,7 +91,7 @@
     <footer class="bg-secondary">
         <div
             class="container mx-auto flex justify-center px-4 py-4 gap-4 flex flex-col items-center text-sm text-zinc-800">
-            <img src="../../../public/UniKids 01.png" alt="Logo da UniKids" class="w-16">
+            <img src="../../../public/logo_2.png" alt="Logo da UniKids" class="w-16">
             <p class="mx-6">Educando e construindo um futuro cada vez melhor.</p>
             <div class="flex flex-col gap-2">
                 <a href="../../../index.html" class="border-b-2 border-primary">Início</a>
