--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                         <div class="text-paragraph">
                             <strong class="text-bold text-primary-dark">Desenvolvimento socioemocional: </strong>
                             <p>
-                                Sabemos da importância do desenvolvimento emocional e promovemos atividades que ajudam as crianças a se conhecerem e se relacionarem.
+                                Sabemos da importância do desenvolvimento emocional e promovemos atividades que ajudam
+                                as crianças a se conhecerem e se relacionarem.
                             </p>
 
                         </div>
@@ -64,7 +65,8 @@
                         <div class="text-paragraph">
                             <strong class="text-bold text-primary-dark">Foco na família: </strong>
                             <p>
-                                A parceria com as famílias é essencial, por isso trabalhamos juntos para o desenvolvimento
+                                A parceria com as famílias é essencial, por isso trabalhamos juntos para o
+                                desenvolvimento
                                 integral das crianças.
                             </p>
                         </div>
@@ -145,10 +147,21 @@
         </div>
     </main>
     <footer class="bg-secondary">
-        <div class="container mx-auto flex justify-center px-4 py-4 gap-4 flex flex-col items-center text-sm text-zinc-800">
+        <div
+            class="container mx-auto flex justify-center px-4 py-4 gap-4 flex flex-col items-center text-sm text-zinc-800">
             <img src="./public/logo_2.png" alt="Logo da UniKids" class="w-16">
-
-            <p class="mx-6">Educando e construindo um futuro cada vez melhor.</p>
+            <div class="text-center">
+                <p class="mx-6">Educando e construindo um futuro cada vez melhor.</p>
+                <p class="mx-6 "> Desenvolvido por
+                    <a href="https://github.com/kainniel">
+                        Danniel Soares
+                    </a>
+                    e
+                    <a href="https://github.com/pwdbymoral">
+                        Vinícius Varjão
+                    </a>
+                </p>
+            </div>
             <div class="flex flex-col gap-2">
                 <a href="#" class="w-20 border-b-2 border-primary">Início</a>
                 <a href="./src/pages/blog/index.html" class="border-b-2 border-primary">Blog</a>
