--- a/src/pages/contato/index.html
+++ b/src/pages/contato/index.html
@@ -92,7 +92,18 @@
         <div
             class="container mx-auto flex justify-center px-4 py-4 gap-4 flex flex-col items-center text-sm text-zinc-800">
             <img src="../../../public/logo_2.png" alt="Logo da UniKids" class="w-16">
-            <p class="mx-6">Educando e construindo um futuro cada vez melhor.</p>
+            <div class="text-center">
+                <p class="mx-6">Educando e construindo um futuro cada vez melhor.</p>
+                <p class="mx-6 "> Desenvolvido por
+                    <a href="https://github.com/kainniel">
+                        Danniel Soares
+                    </a>
+                    e
+                    <a href="https://github.com/pwdbymoral">
+                        Vinícius Varjão
+                    </a>
+                </p>
+            </div>
             <div class="flex flex-col gap-2">
                 <a href="../../../index.html" class="border-b-2 border-primary">Início</a>
                 <a href="../blog/index.html" class="border-b-2 border-primary">Blog</a>
