✨ feat: updated gallery

--- a/index.html
+++ b/index.html
@@ -130,17 +130,23 @@
         </div>
 
         <div class="container mx-auto p-4">
-            <div class="bg-white rounded shadow-md p-8 md:p-4">
+            <div class="bg-white rounded shadow-md p-4">
                 <h2 class="text-2xl text-primary mb-2 font-bold">Confira nossa galeria</h2>
-                <div class="grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-4 p-4">
-                    <img class="mx-auto shadow-xl border-4 rounded border-secondary" src="./public/placeholder.jpeg"
+                <div class="grid grid-cols-1 gap-6 md:grid-cols-2 lg:grid-cols-4">
+                    <img class="mx-auto shadow-xl border-4 border-secondary h-full" src="./public/news_emotions.jpeg"
                         alt="" class="">
-                    <img class="mx-auto shadow-xl border-4 rounded border-secondary" src="./public/placeholder-2.jpg"
+                    <img class="mx-auto shadow-xl border-4 border-secondary h-full" src="./public/news_encontro.jpg"
                         alt="" class="">
-                    <img class="mx-auto shadow-xl border-4 rounded border-secondary" src="./public/placeholder-3.jpeg"
+                    <img class="mx-auto shadow-xl border-4 border-secondary h-full" src="./public/news_folclore.jpg"
                         alt="" class="">
-                    <img class="mx-auto shadow-xl border-4 rounded border-secondary" src="./public/placeholder-4.jpeg"
+                    <img class="mx-auto shadow-xl border-4 border-secondary h-full" src="./public/news_gincana.jpg"
                         alt="" class="">
+                </div>
+                <div class="flex justify-end pt-2">
+                    <button class="py-2 px-4 bg-primary-light text-white font-semibold rounded-lg shadow-md hover:bg-primary focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-opacity-75">
+
+                        <a href="./src/pages/blog/index.html">Veja mais ></a>
+                    </button>
                 </div>
             </div>
 
